--- a/_config.yml
+++ b/_config.yml
@@ -20,69 +20,47 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://italian--boatman-snake-75507.netlify.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.lausanne2020.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
 highlighter: rouge
-gems:
-  - jekyll-feed
+plugins:
+  - jekyll-with-prismic
 exclude:
   - Gemfile
   - Gemfile.lock
+  - readme.md
+
 sass:
   sass_dir: _sass
   style: compressed
 
-languages: ["en","fr","de","it"]
-exclude_from_localizations: ["js", "images", "mapdata"] # should incluse css, but there are some issues with excluding not static files: https://github.com/Anthony-Gaudino/jekyll-multiple-languages-plugin/issues/75
+exclude_from_localizations: ["asset","css","images","js","mapdata","videos", "favicon.png", "readme.md","Stats_SiteInternet_30.07.17.pptx.zip"] # should incluse css, but there are some issues with excluding not static files: https://github.com/Anthony-Gaudino/jekyll-multiple-languages-plugin/issues/75
+exclude: ["about","contact","jobs","preview","sports","venues","news"]
+# languages: [fr-fr,it-it,de-de,en-gb]
+languages: [fr-fr,en-gb]
 
-contentful:
-  spaces:
-    - venues: # Jekyll _data folder identifier - Required
-        space: ENV_CONTENTFUL_SPACE_ID # Required
-        access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
-        cda_query:
-          content_type: venues
-    - sectionSites: # Jekyll _data folder identifier - Required
-        space: ENV_CONTENTFUL_SPACE_ID # Required
-        access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
-        cda_query:
-          content_type: sectionSites
-          order: -sys.createdAt
-    - partnersLogos: # Jekyll _data folder identifier - Required
-        space: ENV_CONTENTFUL_SPACE_ID # Required
-        access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
-        cda_query:
-          content_type: partnersLogos
-    - keyNumbers: # Jekyll _data folder identifier - Required
-        space: ENV_CONTENTFUL_SPACE_ID # Required
-        access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
-        cda_query:
-          content_type: keyNumbers
-    - news: # Jekyll _data folder identifier - Required
-        space: ENV_CONTENTFUL_SPACE_ID # Required
-        access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
-        cda_query:
-          content_type: news
-          order: -fields.date
-    - jobs: # Jekyll _data folder identifier - Required
-        space: ENV_CONTENTFUL_SPACE_ID # Required
-        access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
-        cda_query:
-          content_type: jobs
-          order: -fields.publishDate
-
-page_gen:
-  - data: 'contentful.spaces.news.news'
-    template: 'single-news'
-    name:
-      en: 'titreEn'
-      fr: 'titre'
-      de: 'titreDe'
-      it: 'titreIt'
-    dir: 'news'
-  - data: 'years'
-    template: 'news-archives'
-    name: 'year'
-    dir: 'news-archives'
+prismic:
+  # Your repository endpoint
+  endpoint: 'https://l2020.prismic.io/api'
+  access_token: MC5XbkNtalNRQUFFS3I4UE1T.F--_ve-_ve-_vQoE77-977-977-977-9fi_vv71o77-977-9cO-_ve-_ve-_ve-_vW4277-977-9G--_ve-_vV4k77-9RQ
+  # Collections, key is used to access in the site.prismic.collections
+  # template variable
+  links:
+    news:
+      permalink: /news/:slug-:id/
+  collections:
+    # Example for a "posts" collection
+    news:
+      # Query the documents by type (optional)
+      type: news
+      # Permalink used to generate the output files. This should match an
+      # entry in "links", so documents link to the right output files
+      permalink: /news/:slug
+      # Layout file for this collection
+      layout: prismic_news.html
+      # Max quantity of items (optional, default is 20)
+      page_size: 100
+      # Generate output files or not (default: false)
+      output: true
