--- a/_config.yml
+++ b/_config.yml
@@ -31,13 +31,19 @@ exclude:
   - Gemfile
   - Gemfile.lock
   - readme.md
+  - about
+  - contact
+  - jobs
+  - preview
+  - sports
+  - venues
+  - news
 
 sass:
   sass_dir: _sass
   style: compressed
 
 exclude_from_localizations: ["asset","css","images","js","mapdata","videos", "favicon.png", "readme.md","Stats_SiteInternet_30.07.17.pptx.zip"] # should incluse css, but there are some issues with excluding not static files: https://github.com/Anthony-Gaudino/jekyll-multiple-languages-plugin/issues/75
-exclude: ["about","contact","jobs","preview","sports","venues","news"]
 # languages: [fr-fr,it-it,de-de,en-gb]
 languages: [fr-fr,en-gb]
 
