Change include redirects config

--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,7 @@ markdown: kramdown
 highlighter: rouge
 plugins:
   - jekyll-with-prismic
-include:
-  - _redirects
+include: ["_redirects"]
 exclude:
   - Gemfile
   - Gemfile.lock
