Geodata/venues.json is the new place where venues locations are stored
Problem with prismic type

--- a/_config.yml
+++ b/_config.yml
@@ -77,3 +77,6 @@ prismic:
       page_size: 100
       # Generate output files or not (default: false)
       output: true
+    venues:
+      # Query the documents by type (optional)
+      type: venues
