--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -31,7 +31,7 @@ pages:
       title: Tous les produits Lausanne 2020 bientôt disponibles!
       button: Shop!
     socialwall:
-      title: Social Media Feed
+      title: Instafeed
     newsletter:
       part1: Faites partie de l’aventure Lausanne 2020 et recevez les dernières nouvelles !
       part2: Lausanne2020!
