--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -31,7 +31,7 @@ pages:
       title: All the Lausanne 2020 goodies available soon!
       button: Shop!
     socialwall:
-      title: Social Media Feed
+      title: Instafeed
     newsletter:
       part1: Be part of the Lausanne 2020 adventure and keep up with the latest news!
       part2: Lausanne2020!
