--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -31,7 +31,7 @@ pages:
       title: Alle Lausanne 2020 Fan-Artikel demnächst verfügbar!
       button: Los geht’s
     socialwall:
-      title: Social Media Feed
+      title: Instafeed
     newsletter:
       part1: Sei Teil des Abenteuers Lausanne 2020 und erhalte die aktuellsten News!
       part2: Lausanne2020!
