--- a/_i18n/it.yml
+++ b/_i18n/it.yml
@@ -28,7 +28,7 @@ pages:
       texte: Dal 10 al 22 gennaio 2020, Losanna accoglierà la terza edizione dei Giochi Olimpici Giovanili invernali. A ventisei anni dall’ottenimento del titolo di Capitale Olimpica, Losanna diventa Città Olimpica accogliendo il secondo più grande avvenimento invernale polisportivo dopo i Giochi Olimpici invernali e offrendo ai giovani atleti un’esperienza olimpica indimenticabile. La cultura, le prestazioni e l’educazione si incontrano dando vita ad una vera celebrazione dello sport!
       more: Scopri di più
     socialwall:
-      title: Social Media Feed 
+      title: Instafeed 
     newsletter:
       part1: Partecipate all’avventura Losanna 2020 e ricevete le ultime informazioni! 
       part2: Losanna 2020!
