--- a/_config.yml
+++ b/_config.yml
@@ -28,13 +28,13 @@ highlighter: rouge
 plugins:
   - jekyll-with-prismic
 include: ["_redirects"]
+incremental: true
 exclude:
   - Gemfile
   - Gemfile.lock
   - readme.md
   - about
   - contact
-  - jobs
   - preview
   - sports
   - venues
@@ -44,14 +44,12 @@ sass:
   sass_dir: _sass
   style: compressed
 
-exclude_from_localizations: ["asset","css","images","js","mapdata","videos", "favicon.png", "readme.md","Stats_SiteInternet_30.07.17.pptx.zip"] # should incluse css, but there are some issues with excluding not static files: https://github.com/Anthony-Gaudino/jekyll-multiple-languages-plugin/issues/75
-exclude: ["about","contact","jobs","preview","sports","venues"]
-# languages: [fr-fr,it-it,de-de,en-gb]
+exclude_from_localizations: ["asset","css","images","js","videos", "favicon.png","Stats_SiteInternet_30.07.17.pptx.zip", "_redirects"]
 languages: 
-  fr-fr:
-    path: 'fr'
   en-gb:
     path: 'en'
+  fr-fr:
+    path: 'fr'
 
 prismic:
   # Your repository endpoint
@@ -79,3 +77,5 @@ prismic:
     venues:
       # Query the documents by type (optional)
       type: venues
+    jobs:
+      type: jobs
