Fusion static localizations

--- a/_data/de-de.yml
+++ b/_data/de-de.yml
@@ -1,45 +1,31 @@
+nav:
+  header:
+    - title: "Home"
+      path: "/de/"
+    - title: "News"
+      path: "/de/news"
+    - title: "Wettkampfstätten"
+      path: "/de/venues"
+    - title: "Sportarten"
+      path: "/de/sports"
+    - title: "Über uns"
+      path: "/de/about"
+  footer:
+    - title: "Home"
+      path: "/de/"
+    - title: "News"
+      path: "/de/news"
+    - title: "Wettkampfstätten"
+      path: "/de/venues"
+    - title: "Sportarten"
+      path: "/de/sports"
+    - title: "Über uns"
+      path: "/de/about"
+    - title: "Jobs"
+      path: "/de/jobs"
+    - title: "Kontakt"
+      path: "/de/contact"
 pages:
-  index:
-    title1:
-      part1: Lausanne 2020
-      part2: Wo alles beginnt!
-    title2:
-      part1: Lausanne 2020
-      part2: Vermächtnis, Know-How, Innovation
-    title3:
-      part1: Lausanne 2020
-      part2: Kultur, Sport, Bildung
-    title4:
-      part1: Lausanne 2020
-      part2: Wir sehen uns im Januar 2020
-    text_shop: "Alle Lausanne 2020 Fan-Artikel sind ab sofort in unserem "
-    txt_shop: "Online Shop"
-    text_shop2: " erhältlich." 
-    link_shop: "https://lausanne2020.many-ways.ch/de/"
-    img_shop:  "/images/home/DE_horizontal.png"
-    news:
-      title: News
-      plus: weiterlesen
-      autres: Mehr News
-    about:
-      title: Über uns
-      texte: Vom 10. bis 22. Januar 2020 trägt Lausanne die 3. Auflage der Olympischen Jugend-Winterspiele aus. 26 Jahre nach der Vergabe des Titels «Olympische Hauptstadt» wird Lausanne zur Olympischen Stadt, in dem sie das zweitgrösste Winter Multisportevent nach den Olympischen Winterspielen organisiert und somit den jungen Athleten eine einzigarte und unvergessliche olympische Erfahrung bietet. Die Kultur, die Höchstleistungen und die Bildung finden zusammen und bilden ein wahrhaftes Sportfestival!
-      more: Mehr Infos
-    shop:
-      title: Alle Lausanne 2020 Fan-Artikel demnächst verfügbar!
-      button: Los geht’s
-    socialwall:
-      title: Social Media Feed
-    newsletter:
-      part1: Sei Teil des Abenteuers Lausanne 2020 und erhalte die aktuellsten News!
-      part2: Lausanne2020!
-      button: Los geht’s
-      placeholder: Emailadresse
-      thanks: Vielen Dank für deine Anmeldung!
-      oops: Oops! Something went wrong while submitting the form
-    privacy:
-      text: Datenschutzerklärung und Nutzungsbedingungen
-      link: "https://www.lausanne2020.com/images/home/PrivacyPolicy_DE.pdf"
   news:
     archive_link: Archiv
   about:
