--- a/_data/fr-fr.yml
+++ b/_data/fr-fr.yml
@@ -1,45 +1,31 @@
+nav:
+  header:
+    - title: "Accueil"
+      path: "/fr/"
+    - title: "News"
+      path: "/fr/news"
+    - title: "Sites"
+      path: "/fr/venues"
+    - title: "Sports"
+      path: "/fr/sports"  
+    - title: "A propos"
+      path: "/fr/about"
+  footer:
+    - title: "Accueil"
+      path: "/fr/"
+    - title: "News"
+      path: "/fr/news"
+    - title: "Sites"
+      path: "/fr/venues"
+    - title: "Sports"
+      path: "/fr/sports"
+    - title: "A propos"
+      path: "/fr/about"
+    - title: "Emplois"
+      path: "/fr/jobs"
+    - title: "Contact"
+      path: "/fr/contact"
 pages:
-  index:
-    title1:
-      part1: Lausanne 2020
-      part2: C’est ici que tout commence !
-    title2:
-      part1: Lausanne 2020
-      part2: Héritage, Expertise, Innovation
-    title3:
-      part1: Lausanne 2020
-      part2: Culture, Sport, Education
-    title4:
-      part1: Lausanne 2020
-      part2: Rendez-vous en Janvier 2020
-    text_shop: "Tous les produits Lausanne 2020 sont désormais disponibles dans notre "
-    txt_shop: "boutique en ligne"
-    text_shop2: "."
-    link_shop: "https://lausanne2020.many-ways.ch/fr/"
-    img_shop: "/images/home/FR_horizontal.png"
-    news:
-      title: News
-      plus: Lire la suite
-      autres: Plus de news
-    about:
-      title: A propos
-      texte: Du 10 au 22 janvier 2020, Lausanne accueillera la 3e édition des Jeux Olympiques de la Jeunesse d’hiver. Vingt-six ans après l’obtention de son titre de Capitale Olympique, Lausanne devient Ville Olympique en accueillant le second plus grand événement multisport hivernal après les Jeux Olympiques d’hiver et offre à de jeunes athlètes une expérience olympique inoubliable. La culture, les performances et l’éducation se rencontrent pour former un réel festival du sport!
-      more: En savoir plus
-    shop:
-      title: Tous les produits Lausanne 2020 bientôt disponibles!
-      button: Shop!
-    socialwall:
-      title: Social Media Feed
-    newsletter:
-      part1: Faites partie de l’aventure Lausanne 2020 et recevez les dernières nouvelles !
-      part2: Lausanne2020!
-      button: Je m’inscris
-      placeholder: Adresse email
-      thanks: Merci. Votre inscription a bien été prise en compte.
-      oops: Oops! Something went wrong while submitting the form
-    privacy:
-      text: Politique de confidentialité et conditions d'utilisation
-      link: "https://www.lausanne2020.com/images/home/PrivacyPolicy_FR.pdf"
   news:
     archive_link: Archive
   about:
