--- a/_data/en-gb.yml
+++ b/_data/en-gb.yml
@@ -1,30 +1,30 @@
 nav:
   header:
     - title: "Home"
-      path: "/"
+      path: "/en"
     - title: "News"
-      path: "/news"
+      path: "/en/news"
     - title: "Venues"
-      path: "/venues"
+      path: "/en/venues"
     - title: "Sports"
-      path: "/sports"
+      path: "/en/sports"
     - title: "About"
-      path: "/about"
+      path: "/en/about"
   footer:
     - title: "Home"
-      path: "/"
+      path: "/en"
     - title: "News"
-      path: "/news"
+      path: "/en/news"
     - title: "Venues"
-      path: "/venues"
+      path: "/en/venues"
     - title: "Sports"
-      path: "/sports"
+      path: "/en/sports"
     - title: "About"
-      path: "/about"
+      path: "/en/about"
     - title: "Jobs"
-      path: "/jobs"
+      path: "/en/jobs"
     - title: "Contact"
-      path: "/contact"
+      path: "/en/contact"
 pages:
   news:
     archive_link: Archive
