Fix bug news archives

--- a/_config.yml
+++ b/_config.yml
@@ -75,3 +75,9 @@ prismic:
       type: venues
     jobs:
       type: jobs
+
+page_gen:
+  - data: 'years'
+    template: 'news-archives'
+    name: 'year'
+    dir: 'news-archives'
