--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [context.production]
-  command = "jekyll contentful --rebuild"
+  command = "jekyll build"
 
 [context.branch-deploy]
   command = "jekyll build"
