--- a/_data/fr-fr.yml
+++ b/_data/fr-fr.yml
@@ -4,12 +4,12 @@ nav:
       path: "/fr/"
     - title: "News"
       path: "/fr/news"
-    - title: "Sites"
-      path: "/fr/venues"
-    - title: "Sports"
-      path: "/fr/sports"  
-    - title: "A propos"
-      path: "/fr/about"
+    - title: "Les Jeux"
+      path: "/fr/"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/fr/"  
+    - title: "Contact"
+      path: "/fr/contact"
   footer:
     - title: "Accueil"
       path: "/fr/"
