--- a/_data/en-gb.yml
+++ b/_data/en-gb.yml
@@ -4,12 +4,12 @@ nav:
       path: "/en/"
     - title: "News"
       path: "/en/news"
-    - title: "Venues"
-      path: "/en/venues"
-    - title: "Sports"
-      path: "/en/sports"
-    - title: "About"
-      path: "/en/about"
+    - title: "The Games"
+      path: "/en/games"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/en/"  
+    - title: "Contact"
+      path: "/en/contact"
   footer:
     - title: "Home"
       path: "/en/"
