--- a/_data/es-es.yml
+++ b/_data/es-es.yml
@@ -2,12 +2,14 @@ nav:
   header:
     - title: "Inicio"
       path: "/es/"
-    - title: "Sitios"
-      path: "/es/venues"
-    - title: "Deportes"
-      path: "/es/sports"  
-    - title: "Acerca de"
-      path: "/es/about"
+    - title: "News"
+      path: "/es/news"
+    - title: "Juegos"
+      path: "/es/games"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/en/"  
+    - title: "Contacto"
+      path: "/es/contact"
   footer:
     - title: "Inicio"
       path: "/es/"
