--- a/_data/it-it.yml
+++ b/_data/it-it.yml
@@ -4,12 +4,12 @@ nav:
       path: "/it/"
     - title: "News"
       path: "/it/news"
-    - title: "Sedi"
-      path: "/it/venues"
-    - title: "Sport"
-      path: "/it/sports"  
-    - title: "Chi siamo"
-      path: "/it/about"
+    - title: "I Giochi"
+      path: "/it/games"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/en/"  
+    - title: "Contatto"
+      path: "/it/contact"
   footer:
     - title: "Home"
       path: "/it/"
