--- a/_data/es-es.yml
+++ b/_data/es-es.yml
@@ -4,7 +4,7 @@ nav:
       path: "/es/"
     - title: "News"
       path: "/es/news"
-    - title: "Juegos"
+    - title: "Los Juegos"
       path: "/es/games"
     - title: "Shop"
       path: "https://lausanne2020.many-ways.ch/en/"  
