--- a/_data/de-de.yml
+++ b/_data/de-de.yml
@@ -15,10 +15,12 @@ nav:
       path: "/de/"
     - title: "News"
       path: "/de/news"
-    - title: "Wettkampfstätten"
-      path: "/de/venues"
+    - title: "Die Spiele"
+      path: "/de/games"
     - title: "Sportarten"
       path: "/de/sports"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/de/"  
     - title: "Über uns"
       path: "/de/about"
     - title: "Jobs"
