--- a/_data/en-gb.yml
+++ b/_data/en-gb.yml
@@ -15,10 +15,12 @@ nav:
       path: "/en/"
     - title: "News"
       path: "/en/news"
-    - title: "Venues"
-      path: "/en/venues"
+    - title: "The Games"
+      path: "/en/games"
     - title: "Sports"
       path: "/en/sports"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/en/"
     - title: "About"
       path: "/en/about"
     - title: "Jobs"
