--- a/_data/es-es.yml
+++ b/_data/es-es.yml
@@ -13,10 +13,12 @@ nav:
   footer:
     - title: "Inicio"
       path: "/es/"
-    - title: "Sitios"
-      path: "/es/venues"
+    - title: "Los Juegos"
+      path: "/es/games"
     - title: "Deportes"
       path: "/es/sports"  
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/en/" 
     - title: "Acerca de"
       path: "/es/about"
     - title: "Empleo"
