--- a/_data/fr-fr.yml
+++ b/_data/fr-fr.yml
@@ -15,10 +15,12 @@ nav:
       path: "/fr/"
     - title: "News"
       path: "/fr/news"
-    - title: "Sites"
-      path: "/fr/venues"
+    - title: "Les Jeux"
+      path: "/fr/games"
     - title: "Sports"
       path: "/fr/sports"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/fr/" 
     - title: "A propos"
       path: "/fr/about"
     - title: "Emplois"
