--- a/_data/it-it.yml
+++ b/_data/it-it.yml
@@ -15,10 +15,12 @@ nav:
       path: "/it/"
     - title: "News"
       path: "/it/news"
-    - title: "Sedi"
-      path: "/it/venues"
+    - title: "I Giochi"
+      path: "/it/games"
     - title: "Sport"
       path: "/it/sports"
+    - title: "Shop"
+      path: "https://lausanne2020.many-ways.ch/en/"  
     - title: "Chi siamo"
       path: "/it/about"
     - title: "Offerte di lavoro"
